fixed list and header markdown bug

--- a/src/routes/home/home.html
+++ b/src/routes/home/home.html
@@ -1,5 +1,5 @@
 <template>
-    <require from="./my-app.css"></require>
+    <require from="./home.css"></require>
     <div class="container-fluid p-2">
         <div class="row">
             <div class="col-6">
